# rsomics-plink-ibc

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: fileset.rs  lib.rs  main.rs
tests/: compat.rs
tests/golden/: mono.bed  mono.fam  nosex.fam  nosex.ibc.golden  single.bed  single.bim  single.fam  small.bed  small.bim  small.fam  small.ibc.golden  withx.bed  withx.bim  withx.fam  withx.ibc.golden
