[package]
name = "rsomics-plink-ibc"
version = "0.1.0"
description = "PLINK1 method-of-moments inbreeding coefficients Fhat1/Fhat2/Fhat3 per sample (plink --ibc)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-plink-ibc"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-plink-ibc"
path = "src/main.rs"

[lib]
name = "rsomics_plink_ibc"
path = "src/lib.rs"
doctest = false

[[bench]]
name = "bench"
harness = false

[dependencies]
rsomics-pgen = { version = "0.2" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
